tester_ft/log/compile_error_vec_2.txt
-VECTOR PARAM CONSTRUCTION TEST-

./tmp/outfile_vec_2.cpp:23:21: error: no member named 'begin' in 'ft::vector<int>'
                int ft_res = *(v2.begin() + i % N);
                               ~~ ^
1 error generated.
